added customer and driver buttons

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
             <p>Uber 2, twice as convenient as Uber 1!</p>
             <button type="button" class="btn btn-primary">Take my money!</button>
         </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 box">
+                <p>Customer</p>
+            </div>
+            <div class="col-xs-12 col-sm-6 box">
+                <p>Driver</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
