--- a/app/app.html
+++ b/app/app.html
@@ -3,16 +3,16 @@
 <head>
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-    <link rel="stylesheet" type="text/css" href="app/css/landing.css"/>
+    <link rel="stylesheet" type="text/css" href="css/app.css"/>
 
     <!-- Javascript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
-    <script src="landing.js"></script>
+    <script src="js/app.js"></script>
 </head>
-<body ng-app="uber2-landing">
+<body ng-app="uber2">
     <div class="container">
         <div ng-view>
         </div>
