changed site layout + cleaned up lots of stuff

--- a/app/pages/about.html
+++ b/app/pages/about.html
@@ -1,3 +1,6 @@
+<!-- about.html CSS -->
+<link href="/app/css/about.css"  rel="stylesheet" type="text/css"  />
+
 <div class="jumbotron content-box">
     <h1>About Us</h1>
     <p>Uber2 is amazing and if you don't agree with that then you're not amazing.</p>
