--- a/app/pages/landing.html
+++ b/app/pages/landing.html
@@ -1,3 +1,6 @@
+<!-- landing.html CSS -->
+<link href="/app/css/landing.css"  rel="stylesheet" type="text/css"  />
+
 <div class="jumbotron content-box">
     <h1>Uber2</h1>
     <p>Uber2, twice as convenient as Uber!</p>
@@ -5,9 +8,9 @@
 </div>
 <div class="row">
     <div class="col-xs-12 col-sm-6 box">
-        <a href="app/app.html#/rider">Rider page</a>
+        <a href="#/rider">Rider page</a>
     </div>
     <div class="col-xs-12 col-sm-6 box">
-        <a href="app/app.html#/driver">Driver page</a>
+        <a href="#/driver">Driver page</a>
     </div>
 </div>
