--- a/app/pages/landing.html
+++ b/app/pages/landing.html
@@ -1,16 +1,28 @@
 <!-- landing.html CSS -->
 <link href="/app/css/landing.css"  rel="stylesheet" type="text/css"  />
 
-<div class="jumbotron content-box">
-    <h1>Uber2</h1>
-    <p>Uber2, twice as convenient as Uber!</p>
-    <button type="button" class="btn btn-primary" onclick="document.location.href='#/about'">Take my money!</button>
-</div>
-<div class="row">
-    <div class="col-xs-12 col-sm-6 box">
-        <a href="#/rider">Rider page</a>
+<div>
+    <div class="jumbotron content-box">
+        <h1>Uber2</h1>
+        <p>Turning kilometers into cash.</p>
+        <button type="button" class="btn btn-primary" onclick="document.location.href='#/about'">Sign me up!</button>
     </div>
-    <div class="col-xs-12 col-sm-6 box">
-        <a href="#/driver">Driver page</a>
+    <div class="row">
+        <div class="col-xs-1 col-md-4 spacer-box"></div>
+        <div class="col-xs-10 col-md-4 login-box">
+            <h3>Login</h3>
+            <form>
+                <div class="form-group">
+                    <label for="loginEmail">Email</label>
+                    <input type="email" class="form-control" placeholder="Email" ng-model="email">
+                </div>
+                <div class="form-group">
+                    <label for="loginPassword">Password</label>
+                    <input type="password" class="form-control" placeholder="Password" ng-model="password">
+                </div>
+                <button type="submit" class="btn btn-default">Login</button>
+            </form>
+        </div>
+        <div class="col-xs-1 col-md-4 spacer-box"></div>
     </div>
 </div>
