--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
     <script src="app/js/app.js"></script>
+    <script src="app/js/landing.js"></script>
+    <script src="app/js/register.js"></script>
+    <script src="app/js/rider.js"></script>
+    <script src="app/js/driver.js"></script>
 </head>
 <body ng-app="uber2">
     <div class="container">
