--- a/app/pages/register.html
+++ b/app/pages/register.html
@@ -1,7 +1,7 @@
 <!-- about.html CSS -->
-<link href="/app/css/about.css"  rel="stylesheet" type="text/css"  />
+<link href="/app/css/register.css"  rel="stylesheet" type="text/css"  />
 
 <div class="jumbotron content-box">
-    <h1>About Us</h1>
+    <h1>Register</h1>
     <p>Uber2 is amazing and if you don't agree with that then you're not amazing.</p>
 </div>
