cleaned up rider.js

--- a/app/pages/driver.html
+++ b/app/pages/driver.html
@@ -1,4 +1,4 @@
-<!-- driver.html CSS -->
+<!-- driver CSS -->
 <link href="/app/css/driver.css"  rel="stylesheet" type="text/css"  />
 
 <h1>Driver page</h1>
