--- a/app/pages/landing.html
+++ b/app/pages/landing.html
@@ -1,4 +1,4 @@
-<!-- landing.html CSS -->
+<!-- landing CSS -->
 <link href="/app/css/landing.css"  rel="stylesheet" type="text/css"  />
 
 <div class="jumbotron content-box">
