--- a/app/pages/register.html
+++ b/app/pages/register.html
@@ -1,4 +1,4 @@
-<!-- about.html CSS -->
+<!-- about CSS -->
 <link href="/app/css/register.css"  rel="stylesheet" type="text/css"  />
 
 <div class="jumbotron content-box">
