--- a/app/pages/rider.html
+++ b/app/pages/rider.html
@@ -1,4 +1,4 @@
-<!-- rider.html CSS -->
+<!-- rider CSS -->
 <link href="/app/css/rider.css"  rel="stylesheet" type="text/css"  />
 
 <h1>Rider page</h1>
