--- a/app/pages/rider.html
+++ b/app/pages/rider.html
@@ -1,4 +1,25 @@
-<!-- rider CSS -->
-<link href="/app/css/rider.css"  rel="stylesheet" type="text/css"  />
+<!DOCTYPE html>
+<html>
+<head><title>Uber2</title>
 
-<h1>Rider page</h1>
+<!-- rider.html CSS -->
+<link href="/app/css/rider.css"  rel="stylesheet" type="text/css"  />
+</head>
+<body>
+<div class="jumbotron content-box">
+<h1>Rider Page </h1>
+</div>
+<div id="map"></div>
+    <script>
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: 37.335, lng: -121.881},
+          zoom: 8
+        });
+      }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBC7wNk8LezGmsO1FLz2xH8Twz0j5VPEF8&callback=initMap"
+    async defer></script>
+</body>
+</html>
