--- a/app/pages/rider.html
+++ b/app/pages/rider.html
@@ -9,13 +9,14 @@
     <form>
         <div class="form-group">
             <label for="destination">Enter your destination: </label>
-    		<input type="search" class="form-control" placeholder="For example: 1 Washington Square San Jose CA" ng-model="address">
+    		<input type="text" class="form-control" placeholder="For example: 1 Washington Square San Jose CA" ng-model="address">
+	<button type="submit" class="btn btn-default" >Get ETA</button>
         </div>
     </form>
 
     <ul>
-        <li>Distance: <span ng-bind="distance"></span></li>
-        <li>Time: <span ng-bind="time"></span></li>
+        <li>Distance: <span id="distance"></span></li>
+        <li>Time: <span id="duration"></span></li>
     </ul>
 
     <div id="map"></div>
@@ -54,6 +55,8 @@
 
         // enter riderCtrl
         angular.element($('#map')).scope().initMap(map);
+	var destination = '3434 Silver Creek Rd, San Jose, CA';
+	angular.element($('#map')).scope().getETA(map);
     }
 
     function handleLocationError(browserHasGeolocation, infoWindow, pos) {
@@ -62,5 +65,7 @@
             'Error: The Geolocation service failed.' :
             'Error: Your browser doesn\'t support geolocation.');
     }
-</script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBC7wNk8LezGmsO1FLz2xH8Twz0j5VPEF8&callback=initMap" async defer></script>
+
+	</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQ6yfacZkklf1syeK9AngqJDwo9DB00_4&callback=initMap" async defer></script>
+
