moved map logic from rider.html into rider.js

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body ng-app="uber2">
     <div class="container">
-        <div ng-view>
+        <div id="uber2-view" ng-view>
         </div>
     </div>
 </body>
