--- a/app/pages/rider.html
+++ b/app/pages/rider.html
@@ -26,47 +26,17 @@
 
 <!-- GOOGLE MAPS -->
 <script>
-    var map;
+    'use strict';
+    
     function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
+        let map = new google.maps.Map(document.getElementById('map'), {
             center: {lat: 37.335, lng: -121.881},
             zoom: 8
         });
 
-        var infoWindow = new google.maps.InfoWindow({map: map});
-
-        // Try HTML5 geolocation.
-        if (navigator.geolocation) {
-            navigator.geolocation.getCurrentPosition(function(position) {
-                var pos = {
-                    lat: position.coords.latitude,
-                    lng: position.coords.longitude
-                };
-
-                infoWindow.setPosition(pos);
-                infoWindow.setContent('Location found.');
-                map.setCenter(pos);
-            }, function() {
-                handleLocationError(true, infoWindow, map.getCenter());
-            });
-        } else {
-                // Browser doesn't support Geolocation
-                handleLocationError(false, infoWindow, map.getCenter());
-        }
-
         // enter riderCtrl
-        angular.element($('#map')).scope().initMap(map);
-	var destination = '3434 Silver Creek Rd, San Jose, CA';
-	//angular.element($('#map')).scope().getETA(map);
+        angular.element($('#uber2-view')).scope().initMap(map);
     }
 
-    function handleLocationError(browserHasGeolocation, infoWindow, pos) {
-        infoWindow.setPosition(pos);
-        infoWindow.setContent(browserHasGeolocation ?
-            'Error: The Geolocation service failed.' :
-            'Error: Your browser doesn\'t support geolocation.');
-    }
-
-	</script>
+</script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQ6yfacZkklf1syeK9AngqJDwo9DB00_4&callback=initMap" async defer></script>
-
