--- a/app/pages/rider.html
+++ b/app/pages/rider.html
@@ -9,15 +9,15 @@
     <form>
         <div class="form-group">
             <label for="destination">Enter your destination: </label>
-    		<input type="text" class="form-control" placeholder="For example: 1 Washington Square San Jose CA" ng-model="address">
+    		<input type="text" class="form-control" placeholder="1 Washington Square San Jose CA" ng-model="address">
 	<button type="submit" class="btn btn-default" ng-click="getETA(map)">Get ETA</button>
         </div>
     </form>
 
     <ul>
-        <li>Distance: <span id="distance"></span></li>
-        <li>Time: <span id="duration"></span></li>
-	<li>Cost: $<span id="cost"></span></li>
+        <li>Distance: <span ng-bind="distance"></span></li>
+        <li>Time: <span ng-bind="duration"></span></li>
+	    <li>Cost: $<span ng-bind="cost"></span></li>
     </ul>
 
     <div id="map"></div>
@@ -27,7 +27,7 @@
 <!-- GOOGLE MAPS -->
 <script>
     'use strict';
-    
+
     function initMap() {
         let map = new google.maps.Map(document.getElementById('map'), {
             center: {lat: 37.335, lng: -121.881},
