fixed login page and implemented registration page

--- a/app/pages/rider.html
+++ b/app/pages/rider.html
@@ -1,7 +1,7 @@
 <!-- rider.html CSS -->
-<link href="/app/css/rider.css"  rel="stylesheet" type="text/css"  />
+<link href="app/css/rider.css"  rel="stylesheet" type="text/css"  />
 
-<div class="jumbotron content-box">
+<div class="jumbotron title-box">
     <h1>Rider Page</h1>
 </div>
 
@@ -10,7 +10,7 @@
         <div class="form-group">
             <label for="destination">Enter your destination: </label>
     		<input type="text" class="form-control" placeholder="1 Washington Square San Jose CA" ng-model="address">
-	<button type="submit" class="btn btn-default" ng-click="getETA(map)">Get ETA</button>
+	        <button type="submit" class="btn btn-default" ng-click="getETA(map)">Get ETA</button>
         </div>
     </form>
 
