--- a/app/pages/landing.html
+++ b/app/pages/landing.html
@@ -1,5 +1,5 @@
 <!-- landing CSS -->
-<link href="/app/css/landing.css"  rel="stylesheet" type="text/css"  />
+<link href="app/css/landing.css"  rel="stylesheet" type="text/css"  />
 
 <div class="jumbotron content-box">
     <h1>Uber2</h1>
@@ -15,6 +15,7 @@
                 <label for="loginEmail">Email</label>
                 <input type="email" class="form-control" placeholder="Email" ng-model="email">
             </div>
+            <div id="login-alert" class="alert alert-danger" role="alert">Could not login!</div>
             <div class="form-group">
                 <label for="loginPassword">Password</label>
                 <input type="password" class="form-control" placeholder="Password" ng-model="password">
