--- a/app/pages/register.html
+++ b/app/pages/register.html
@@ -1,7 +1,31 @@
 <!-- about CSS -->
-<link href="/app/css/register.css"  rel="stylesheet" type="text/css"  />
+<link href="app/css/register.css"  rel="stylesheet" type="text/css"  />
 
-<div class="jumbotron content-box">
+<div class="jumbotron title-box">
     <h1>Register</h1>
     <p>Uber2 is amazing and if you don't agree with that then you're not amazing.</p>
+</div>
+
+<div class="row">
+    <div class="col-xs-1 col-md-4"></div>
+    <div class="col-xs-10 col-md-4 register-box">
+        <h3>Register</h3>
+        <form>
+            <div id="register-alert" class="alert alert-danger" role="alert">Could not register!</div>
+            <div class="form-group">
+                <label for="registerEmail">Email</label>
+                <input type="email" class="form-control" placeholder="Email" ng-model="email">
+            </div>
+            <div class="form-group">
+                <label for="registerPassword">Password</label>
+                <input type="password" class="form-control" placeholder="Password" ng-model="password">
+            </div>
+            <div class="form-group">
+                <label>Do you want to be a driver? </label>
+                <input type="checkbox" value="driverStatus" ng-model="driverStatus">
+            </div>
+            <button type="submit" class="btn btn-default" ng-click="register()">Register</button>
+        </form>
+    </div>
+    <div class="col-xs-1 col-md-4"></div>
 </div>
