moved driver code to controller but it's buggy af

--- a/app/pages/driver.html
+++ b/app/pages/driver.html
@@ -1,4 +1,14 @@
 <!-- driver CSS -->
 <link href="app/css/driver.css"  rel="stylesheet" type="text/css"  />
 
-<h1>Driver page</h1>
+<div class="jumbotron title-box">
+    <h1>Driver Page</h1>
+</div>
+
+<div id="floating-panel">
+    <button id ="click">Direction to client</button>
+</div>
+
+<div id="right-panel"></div>
+
+<div id="map"></div>
