--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="app/js/app.js"></script>
     <script src="app/js/userService.js"></script>
     <script src="app/js/landing.js"></script>
+    <script src="app/js/about.js"></script>
     <script src="app/js/register.js"></script>
     <script src="app/js/rider.js"></script>
     <script src="app/js/driver.js"></script>
