--- a/app/pages/navbar.html
+++ b/app/pages/navbar.html
@@ -1,7 +1,4 @@
-<!-- driver CSS -->
-<link href="app/css/driver.css"  rel="stylesheet" type="text/css"  />
-
-<div class="navbar navbar-default">
+<div class="navbar navbar-default"
     <div class="container-fluid">
         <div class="navbar-header">
             <a href="#/landing" class="navbar-brand">Uber 2</a>
@@ -27,18 +24,3 @@
         </nav>
     </div>
 </div>
-
-<div class="jumbotron title-box">
-    <h1>Driver Page</h1>
-</div>
-
-<div id="floating-panel">
-    <button id ="click">Direction to client</button>
-</div>
-
-<div id="right-panel"></div>
-
-<div id="map">
-
-</div>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCg5vYIK-jzpARJEDjbGdG91xn0r0eGvVM&callback=initMap" async defer></script>
