added https redirecting

--- a/app/pages/driver.html
+++ b/app/pages/driver.html
@@ -11,6 +11,6 @@
         <span>user_id: {{ req[1] }}</span><br>
         <span>lat: {{ req[2] }}</span><br>
         <span>lng: {{ req[3] }}</span><br>
-        <span>time: {{ req[4] }}</span><br><hr>
+        <span>time: {{ req[4] }}</span><br>
     </div>
 </div>
