--- a/app/pages/driver.html
+++ b/app/pages/driver.html
@@ -38,7 +38,8 @@
         <span>user_id: {{ req[1] }}</span><br>
         <span>lat: {{ req[2] }}</span><br>
         <span>lng: {{ req[3] }}</span><br>
-        <span>time: {{ req[4] }}</span><br><hr>
+        <span>time: {{ req[4] }}</span><br>
+        <button ng-click="">Accept Request</button>
     </div>
 </div>
 
