Testing out some functionality

--- a/app/pages/driver.html
+++ b/app/pages/driver.html
@@ -39,7 +39,7 @@
         <span>lat: {{ req[2] }}</span><br>
         <span>lng: {{ req[3] }}</span><br>
         <span>time: {{ req[4] }}</span><br>
-        <button ng-click="acceptRide()">Accept Request</button>
+        <button ng-click="acceptRide({{req[0]}})">Accept Request</button>
     </div>
 </div>
 
