Testing functionality of server side accepting ride request

--- a/app/pages/driver.html
+++ b/app/pages/driver.html
@@ -40,8 +40,8 @@
         <span>lng: {{ req[3] }}</span><br>
         <span>time: {{ req[4] }}</span><br>
         <span>status: {{ req[5] }}</span><br>
-        <button ng-if="currentRequest == ''" ng-click="acceptRide(req[0])">Accept Request</button>
-        <button ng-if="currentRequest == req[0]" ng-click="cancelRide(req[0])">Cancel Request</button>
+        <button ng-if="currentRequest == ''" ng-click="acceptRide(req)">Accept Request</button>
+        <button ng-if="currentRequest == req[0]" ng-click="cancelRide(req)">Cancel Request</button>
     </div>
 </div>
 
