Fixing bug attempt #3

--- a/app/pages/driver.html
+++ b/app/pages/driver.html
@@ -40,7 +40,7 @@
         <span>lng: {{ req[3] }}</span><br>
         <span>time: {{ req[4] }}</span><br>
         <span>status: {{ req[5] }}</span><br>
-        <button ng-if="currentRequest == ''" ng-click="acceptRide(req)">Accept Request</button>
+        <button ng-init="checkRides(req)" ng-if="currentRequest == ''" ng-click="acceptRide(req)">Accept Request</button>
         <button ng-if="currentRequest == req[0]" ng-click="cancelRide(req)">Cancel Request</button>
     </div>
 </div>
