--- a/app/pages/rider.html
+++ b/app/pages/rider.html
@@ -5,23 +5,29 @@
 <div class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-elements" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
             <a href="#/landing" class="navbar-brand">Uber 2</a>
         </div>
-        <nav class="{{active}}">
+        <nav class="collapse navbar-collapse" ng-class="active" id="nav-elements">
             <ul class="nav navbar-nav">
-                <li>
+                <li ng-class="active == 'landing' ? 'active' : ''">
                     <a href="#/landing" class="landing" ng-click="active='landing'">Home</a>
                 </li>
-                <li>
+                <li ng-class="active == 'register' ? 'active' : ''">
                     <a href="#/register" class="register" ng-click="active='register'">Register</a>
                 </li>
-                <li>
+                <li ng-class="active == 'driver' ? 'active' : ''">
                     <a href="#/driver" class="driver" ng-click="active='driver'">Driver</a>
                 </li>
-                <li>
+                <li ng-class="active == 'rider' ? 'active' : ''">
                     <a href="#/rider" class="rider" ng-click="active='rider'">Rider</a>
                 </li>
-                <li>
+                <li ng-class="active == 'about' ? 'active' : ''">
                     <a href="#/about" class="about" ng-click="active='about'">About</a>
                 </li>
             </ul>
