--- a/app/pages/rider.html
+++ b/app/pages/rider.html
@@ -16,7 +16,7 @@
         <nav class="collapse navbar-collapse" ng-class="active" id="nav-elements">
             <ul class="nav navbar-nav">
                 <li ng-class="active == 'landing' ? 'active' : ''">
-                    <a href="#/landing" class="landing" ng-click="active='landing'">Home</a>
+                    <a href="#/" class="landing" ng-click="active='landing'">Home</a>
                 </li>
                 <li ng-class="active == 'register' ? 'active' : ''">
                     <a href="#/register" class="register" ng-click="active='register'">Register</a>
