Fleshing out accept/cancel ride request on backend/frontend

--- a/app/pages/driver.html
+++ b/app/pages/driver.html
@@ -40,8 +40,9 @@
         <span>lng: {{ req[3] }}</span><br>
         <span>time: {{ req[4] }}</span><br>
         <span>status: {{ req[5] }}</span><br>
-        <button ng-init="checkRides(req)" ng-if="currentRequest == ''" ng-click="acceptRide(req)">Accept Request</button>
-        <button ng-if="currentRequest == req[0]" ng-click="cancelRide(req)">Cancel Request</button>
+        <span>driver: {{ req[6] }}
+        <button ng-init="checkRides(req)" ng-if="currentRequest == ''" ng-click="acceptRide(req, user)">Accept Request</button>
+        <button ng-if="currentRequest == req[0]" ng-click="cancelRide(req, user)">Cancel Request</button>
     </div>
 </div>
 
