--- a/app/pages/driver.html
+++ b/app/pages/driver.html
@@ -10,7 +10,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="#/landing" class="navbar-brand">Uber 2</a>
+            <a href="#/" class="navbar-brand">Uber 2</a>
         </div>
         <nav class="collapse navbar-collapse" ng-class="active" id="nav-elements">
             <ul class="nav navbar-nav">
