--- a/app/pages/register.html
+++ b/app/pages/register.html
@@ -1,4 +1,4 @@
-<!-- about CSS -->
+<!-- register CSS -->
 <link href="app/css/register.css"  rel="stylesheet" type="text/css"  />
 
 <div class="navbar navbar-default">
@@ -10,7 +10,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="#/landing" class="navbar-brand">Uber 2</a>
+            <a href="#/" class="navbar-brand">Uber 2</a>
         </div>
         <nav class="collapse navbar-collapse" ng-class="active" id="nav-elements">
             <ul class="nav navbar-nav">
