--- a/app/pages/driver.html
+++ b/app/pages/driver.html
@@ -47,7 +47,7 @@
         <span>time: {{ req[4] }}</span><br>
         <span>status: {{ req[5] }}</span><br>
         <span>driver: {{ req[6] }}
-        <button ng-init="checkRides(req)" ng-if="currentRequest == ''" ng-click="acceptRide(req, user)">Accept Request</button>
+        <button ng-if="currentRequest == ''" ng-click="acceptRide(req, user)">Accept Request</button>
         <button ng-if="currentRequest == req[0]" ng-click="cancelRide(req, user)">Cancel Request</button>
     </div>
 </div>
