--- a/app/pages/landing.html
+++ b/app/pages/landing.html
@@ -53,7 +53,7 @@
                 <label for="loginPassword">Password</label>
                 <input type="password" class="form-control" placeholder="Password" ng-model="password" />
             </div>
-            <input type="button" class="btn btn-default" ng-click="login()"/>
+            <input type="button" class="btn btn-default" value="Login" ng-click="login()"/>
         </form>
     </div>
     <div class="col-xs-1 col-md-4"></div>
