--- a/app/pages/driver.html
+++ b/app/pages/driver.html
@@ -50,8 +50,8 @@
         <span>lng: {{ req[4] }}</span><br>
         <span>time: {{ req[5] }}</span><br>
         <span>status: {{ req[6] }}</span><br>
-        <button ng-show="checkBusy(req)" ng-click="acceptRide(req, user)">Accept Request</button>
-        <button ng-show="!checkBusy(req)" ng-click="cancelRide(req, user)">Cancel Request</button>
+        <button ng-show="available" ng-click="acceptRide(req, user)">Accept Request</button>
+        <button ng-show="!available && checkRequest(req)" ng-click="cancelRide(req, user)">Cancel Request</button>
     </div>
 </div>
 
