updating rider page to change according to ride request status

--- a/app/pages/driver.html
+++ b/app/pages/driver.html
@@ -43,6 +43,7 @@
 
 <div class="panel request-box">
     <div class="well" ng-repeat="req in requests">
+        <span> REQ: {{ req }}</span>
         <span>req_id: {{ req["req_id"] }}</span><br>
         <span>user_id: {{ req["user_id"] }}</span><br>
         <span>driver: {{ req["driver"] }}</span><br>
