--- a/app/pages/driver.html
+++ b/app/pages/driver.html
@@ -43,13 +43,10 @@
 
 <div class="panel request-box">
     <div class="well" ng-repeat="req in requests">
-        <span>req_id: {{ req["req_id"] }}</span><br>
-        <span>user_id: {{ req["user_id"] }}</span><br>
-        <span>driver: {{ req["driver"] }}</span><br>
-        <span>lat: {{ req["lat"] }}</span><br>
-        <span>lng: {{ req["lng"] }}</span><br>
-        <span>time: {{ req["time"] }}</span><br>
-        <span>status: {{ req["status"] }}</span><br>
+        <span>Rider email: {{ req["email"] }}</span><br>
+        <span>Latitude: {{ req["lat"] }}</span><br>
+        <span>Longitude: {{ req["lng"] }}</span><br>
+        <span>{{ req["time"] }}</span><br>
         <button ng-show="available" ng-click="acceptRide(req, user)">Accept Request</button>
         <button ng-show="!available && checkRequest(req)" ng-click="cancelRide(req, user)">Cancel Request</button>
     </div>
