updating rider page to change according to ride request status

--- a/app/pages/rider.html
+++ b/app/pages/rider.html
@@ -77,7 +77,7 @@
 
 <!-- in progress ride request -->
 <div ng-if="rideStatus == 'in_progress'" class="jumbotron content-box">
-    
+    <p>We found you a driver!</p>
 </div>
 
 <!-- GOOGLE MAPS -->
