--- a/app/pages/about.html
+++ b/app/pages/about.html
@@ -34,33 +34,21 @@
     </div>
 </div>
 
-<div class="jumbotron content-box">
+<div class="jumbotron title-box">
     <h1>About</h1>
 </div>
 
-<div class="row">
+<div class="row content-box">
     <div class="col-xs-4">
-        <div class="col-xs-12 table-header">
-            <h2>Drivers</h2>
-        </div>
-        <div class="col-xs-12">
-            <p>Our drivers like to drive!</p>
-        </div>
+        <h2>Drivers</h2>
+        <p>Our drivers like to drive!</p>
     </div>
     <div class="col-xs-4">
-        <div class="col-xs-12 table-header">
-            <h2>Riders</h2>
-        </div>
-        <div class="col-xs-12">
-            <p>Our riders love our drivers!</p>
-        </div>
+        <h2>Riders</h2>
+        <p>Our riders love our drivers!</p>
     </div>
     <div class="col-xs-4">
-        <div class="col-xs-12 table-header">
-            <h2>Developers</h2>
-        </div>
-        <div class="col-xs-12">
-            <p>And we work for both our drivers and riders!</p>
-        </div>
+        <h2>Developers</h2>
+        <p>And we work for both our drivers and riders!</p>
     </div>
 </div>
