fixing landing page css

--- a/app/pages/landing.html
+++ b/app/pages/landing.html
@@ -34,12 +34,13 @@
     </div>
 </div>
 
-<div class="jumbotron content-box">
+<div class="jumbotron title-box">
     <h1>Uber2</h1>
     <p>Turning kilometers into cash.</p>
     <button type="button" class="btn btn-primary" onclick="document.location.href='#/register'">Sign me up!</button>
 </div>
-<div class="row">
+
+<div class="row content-box">
     <div class="col-xs-1 col-md-4"></div>
     <div class="col-xs-10 col-md-4 login-box">
         <h3>Login</h3>
