--- a/app/pages/rider.html
+++ b/app/pages/rider.html
@@ -77,7 +77,7 @@
 
 <!-- in progress ride request -->
 <div ng-if="rideStatus == 'in_progress'" class="jumbotron content-box">
-    <p>We found you a driver!</p>
+    <p>We found you a driver! They are now on their way to pick you up.</p>
 </div>
 
 <!-- GOOGLE MAPS -->
