pls work rider page

--- a/app/pages/rider.html
+++ b/app/pages/rider.html
@@ -85,6 +85,7 @@
     'use strict';
 
     function initMap() {
+        window.map = $('<div></div>').attr({id: "map"}).get();
         let map = new google.maps.Map(window.map, {
             center: {lat: 37.335, lng: -121.881},
             zoom: 10
