--- a/app/pages/rider.html
+++ b/app/pages/rider.html
@@ -66,7 +66,7 @@
 	    <li>Cost: $<span>{{ cost }}</span></li>
     </ul>
 
-    <div ng-load="setMap()" id="map-container"></div>
+    <div id="map"></div>
     </div>
 </div>
 
@@ -85,8 +85,7 @@
     'use strict';
 
     function initMap() {
-        window.map = $('<div></div>').attr({id: "map"}).get();
-        let map = new google.maps.Map(window.map, {
+        let map = new google.maps.Map($('#map').get(), {
             center: {lat: 37.335, lng: -121.881},
             zoom: 10
         });
