pls work rider page

--- a/app/pages/rider.html
+++ b/app/pages/rider.html
@@ -43,7 +43,7 @@
 </div>
 
 <!-- no current ride request -->
-<div ng-init="rideStatus = 'none'" ng-hide="rideStatus != 'none'" class="jumbotron content-box">
+<div ng-init="rideStatus = 'none'"  class="jumbotron content-box">
     <form>
         <div class="form-group">
             <label for="destination">Enter your location: </label>
