--- a/app/pages/rider.html
+++ b/app/pages/rider.html
@@ -66,7 +66,7 @@
         <li>Cost: $<span>{{ cost }}</span></li>
     </ul>
 
-    <div ng-load="setMap()" id="map-container"></div>
+    <div ng-init="setMap()" id="map-container"></div>
     </div>
 </div>
 
